tests/ui/test_attr_async_fn.stderr
error: #[quickcheck_richderive::quickcheck] does not support `async fn` — quickcheck has no async test runner; remove `async` or wait for upstream support
 --> tests/ui/test_attr_async_fn.rs:4:1
  |
4 | async fn t(x: u8) -> bool {
  | ^^^^^
